--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ v4_0_37
           structure of the rest of mtools
 	- Add support to -i option to mcd
 	- Document -i in mtools.1
-	- Fix a missing commad error in floppyd_io.c
+	- Fix a missing command error in floppyd_io.c
 
 v4_0_36
 	- Fix error status of recursive listing of empty root directory
