Removed libbsd dependency
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@721 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mtools (20220509) stable; urgency=low
+
+  * Remove libbsd dependency
+
+ -- Alain Knaff <alain@knaff.lu>  Mon,  9 May 2022 21:26:09 +0200
 mtools (4.0.39) stable; urgency=low
 
   * Rename strtoi to strosi (string to signed int). The strtoi
