--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+	- Remove libbsd dependency
 v4_0_39
 	- Rename strtoi to strosi (string to signed int). The strtoi
           function on BSD does something else (returns an intmax, not
