--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+v4_0_42
+	- Added postcmd attribute in drive description to allow to
+          execute "device release" code automatically at end of
+          command
+	- Code cleanup (unneeded functions, initializations, added
+          comments to unobvious code, obsolete stuff in Makefile)
+	- signedness cleanup about directory entries
 v4_0_41
 	- Made it possible again to have FAT32 filesystems with less
 	than 0xfff5 clusters
