--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mtools (4.0.42) stable; urgency=low
+
+  * Added postcmd attribute in drive description to allow to
+    execute "device release" code automatically at end of
+    command
+  * Code cleanup (unneeded functions, initializations, added
+    comments to unobvious code, obsolete stuff in Makefile)
+  * signedness cleanup about directory entries
+
+ -- Alain Knaff <alain@knaff.lu>  Sat, 22 Oct 2022 14:03:42 +0200
 mtools (4.0.41) stable; urgency=low
 
   * Made it possible again to have FAT32 filesystems with less
